force-app/main/default/objects/Account/fields/PotencialVidas__c.field-meta.xml
<CustomField>
    <fullName>PotencialVidas__c</fullName>
    <label>Potencial de vidas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>De 1 a 5</fullName>
            </value>
            <value>
                <fullName>De 6 a 10</fullName>
            </value>
            <value>
                <fullName>De 11 a 20</fullName>
            </value>
            <value>
                <fullName>De 21 a 29</fullName>
            </value>
            <value>
                <fullName>Acima de 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>