force-app/main/default/objects/Account/fields/PrimeiraVisitaRealizada__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraVisitaRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primeira Visita Realizada</label>
    <type>Checkbox</type>
</CustomField>