force-app/main/default/objects/Account/fields/ProtecaoFamiliar__c.field-meta.xml
<CustomField>
    <fullName>ProtecaoFamiliar__c</fullName>
    <label>Proteção Familiar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>