force-app/main/default/objects/Account/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Id do Registro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>