force-app/main/default/objects/Account/fields/SituacaoSerasa__c.field-meta.xml
<CustomField>
    <fullName>SituacaoSerasa__c</fullName>
    <label>Situação Serasa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>Negado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>