force-app/main/default/objects/Account/fields/SubMotivoNaoVenda__c.field-meta.xml
<CustomField>
    <fullName>SubMotivoNaoVenda__c</fullName>
    <label>Sub Motivo Não Venda</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MotivoNaoVenda__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Hapivida</fullName>
            </value>
            <value>
                <fullName>Notredame</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Promed</fullName>
            </value>
            <value>
                <fullName>Samp</fullName>
            </value>
            <value>
                <fullName>Saúde Sistema</fullName>
            </value>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>Unimed BH</fullName>
            </value>
            <value>
                <fullName>Unimed CO- Irmã</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>