force-app/main/default/objects/Account/fields/TempoContratoOutraOperadora__c.field-meta.xml
<CustomField>
    <fullName>TempoContratoOutraOperadora__c</fullName>
    <inlineHelpText>Informar a quanto tempo de está no contrato de outra operadora</inlineHelpText>
    <label>Tempo no contrato de outra operadora?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>