force-app/main/default/objects/Account/fields/TipoContratacao__c.field-meta.xml
<CustomField>
    <fullName>TipoContratacao__c</fullName>
    <label>Qual tipo de contratação?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>MEI</fullName>
            </value>
            <value>
                <fullName>1 a 29 pessoas</fullName>
            </value>
            <value>
                <fullName>30 a 99 pessoas</fullName>
            </value>
            <value>
                <fullName>100 a 299 pessoas</fullName>
            </value>
            <value>
                <fullName>300 a 599 pessoas</fullName>
            </value>
            <value>
                <fullName>a partir de 600 pessoas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>