force-app/main/default/objects/Account/fields/UrlEcommerce__c.field-meta.xml
<CustomField>
    <fullName>UrlEcommerce__c</fullName>
    <label>Url do e-commerce</label>
    <type>Url</type>
</CustomField>