force-app/main/default/objects/Account/validationRules/ObrigatoriedadeTelefoneOUCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigatoriedadeTelefoneOUCelular</fullName>
    <active>true</active>
    <description>Telefone ou Celular são obrigatórios!</description>
    <errorConditionFormula>true = false</errorConditionFormula>
    <errorMessage>Telefone ou Celular são obrigatórios</errorMessage>
</ValidationRule>