force-app/main/default/objects/Account/validationRules/ValidaCNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaCNPJ</fullName>
    <active>false</active>
    <description>Valida se o CNPJ é valido, ou seja, se realmente existe.</description>
    <errorConditionFormula>AND(NOT($Permission.ByPassValidationRules),NOT($Permission.Integracao),NOT(OR(LEN(CNPJ__c)=0,AND(MOD(MOD(11-MOD(VALUE(MID(CNPJ__c,1,1))*5+VALUE(MID(CNPJ__c,2,1))*4+VALUE(MID(CNPJ__c,3,1))*3+VALUE(MID(CNPJ__c,4,1))*2+VALUE(MID(CNPJ__c,5,1))*9+VALUE(MID(CNPJ__c,6,1))*8+VALUE(MID(CNPJ__c,7,1))*7+VALUE(MID(CNPJ__c,8,1))*6+VALUE(MID(CNPJ__c,9,1))*5+VALUE(MID(CNPJ__c,10,1))*4+VALUE(MID(CNPJ__c,11,1))*3+VALUE(MID(CNPJ__c,12,1))*2,11),11),10) =VALUE(MID(CNPJ__c,13,1)),MOD(MOD(11-MOD(VALUE(MID(CNPJ__c,1,1))*6+VALUE(MID(CNPJ__c,2,1))*5+VALUE(MID(CNPJ__c,3,1))*4+VALUE(MID(CNPJ__c,4,1))*3+VALUE(MID(CNPJ__c,5,1))*2+VALUE(MID(CNPJ__c,6,1))*9+VALUE(MID(CNPJ__c,7,1))*8+VALUE(MID(CNPJ__c,8,1))*7+VALUE(MID(CNPJ__c,9,1))*6+VALUE(MID(CNPJ__c,10,1))*5+VALUE(MID(CNPJ__c,11,1))*4+VALUE(MID(CNPJ__c,12,1))*3+VALUE(MID(CNPJ__c,13,1))*2,11),11),10) =VALUE(MID(CNPJ__c,14,1)))))) &amp;&amp; NOT($Permission.ByPassValidationRules) &amp;&amp; NOT($Permission.Integracao)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>O Número do CNPJ informado é invalido</errorMessage>
</ValidationRule>