force-app/main/default/objects/Account/validationRules/ValidarCaracteresCPF.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCaracteresCPF</fullName>
    <active>true</active>
    <description>Preencher o cpf da forma corretora</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; AND(NOT(ISBLANK( CPF__c )),NOT(REGEX( CPF__c , &quot;^([0-9]{3}\\.[0-9]{3}\\.[0-9]{3}\\-[0-9]{2})|(\\d{11})|([0-9]{3}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{2})$&quot;)))</errorConditionFormula>
    <errorDisplayField>CPF__c</errorDisplayField>
    <errorMessage>Por favor, preencha corretamente o CPF.</errorMessage>
</ValidationRule>