force-app/main/default/objects/Account/validationRules/VR01_Conta_MascaraCampoTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Conta_MascaraCampoTelefone</fullName>
    <active>true</active>
    <description>Máscara do campo telefone</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
NOT(ISBLANK(Phone))
&amp;&amp;
!REGEX(Phone,&quot;^(\\(\\d{2}\\)\\ \\d{4}\\d?\\-\\d{4})?$&quot;)</errorConditionFormula>
    <errorMessage>O Telefone deve estar no seguinte formato: (xx)xxxx-xxxx</errorMessage>
</ValidationRule>