force-app/main/default/objects/Account/validationRules/VR02_Conta_MascaraCelular.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Conta_MascaraCelular</fullName>
    <active>true</active>
    <description>Máscara do campo Celular</description>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules)
&amp;&amp;
NOT(ISBLANK(PersonMobilePhone))
&amp;&amp;
!REGEX(PersonMobilePhone ,&quot;^(\\([0-9]{2}\\)\\ [0-9]{4,5}\\-[0-9]{4})|(\\d{8,13})$&quot;)</errorConditionFormula>
    <errorMessage>O Celular deve estar no seguinte formato: (xx)xxxxx-xxxx</errorMessage>
</ValidationRule>