force-app/main/default/objects/Account/validationRules/VR_Conta_ImpedeCelularInvalido.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Conta_ImpedeCelularInvalido</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($Permission.ByPassValidationRules) &amp;&amp; (PersonMobilePhone = &apos;(11) 1111-1112&apos;|| PersonMobilePhone =&apos;(31) 77777-7777&apos;||PersonMobilePhone =&apos;(31) 11111-1111&apos;|| PersonMobilePhone =&apos;(11) 1111-11119&apos;|| PersonMobilePhone  =&apos;(31) 33333-3333&apos;|| PersonMobilePhone =&apos;(31) 9999-9999&apos;|| PersonMobilePhone =&apos;(31) 2222-2222&apos;|| PersonMobilePhone =&apos;(31) 55555-5555&apos;|| PersonMobilePhone =&apos;(31) 1111-1111&apos;|| PersonMobilePhone =&apos;(11) 1111-1111&apos;|| PersonMobilePhone =&apos;(31) 7777-7777&apos;|| PersonMobilePhone =&apos;(31) 4444-4444&apos;|| PersonMobilePhone =&apos;(11) 11111-1111&apos;|| PersonMobilePhone =&apos;(31) 44444-4444&apos;|| PersonMobilePhone =&apos;(31) 99999-9999&apos;|| PersonMobilePhone =&apos;(31) 3333-3333&apos;|| PersonMobilePhone =&apos;(31) 5555-5555&apos;|| PersonMobilePhone =&apos;(31) 8888-8888&apos;|| PersonMobilePhone =&apos;(31) 88888-8888&apos;|| PersonMobilePhone =&apos;(31) 6666-6666&apos;|| PersonMobilePhone =&apos;(31) 66666-6666&apos;)</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Por favor, insira um celular válido.</errorMessage>
</ValidationRule>